--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.2.3",
+    "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
+    "ngx-echarts": "^16.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^10.1.0",
     "tslib": "^2.3.0",
