--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^7.2.3",
     "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-echarts": "^16.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^10.1.0",
